--- a/themes/bootstrap/sass/home/_responsitive-max767.scss
+++ b/themes/bootstrap/sass/home/_responsitive-max767.scss
@@ -31,6 +31,7 @@
     .head{
       .logo{
         text-align: center;
+        margin-top: 20px;
       }
       .span3,
       .span9{
@@ -44,54 +45,35 @@
     }
   }
   .main{
-    .aside-sidebar{
-      @include hide-box();
-    }
-    .span9{
-      width: 100%;
-    }
-    .home-news{
-      .span6{
-        float: left;
+    .home-page{
+      .home-title{
+        margin-top: -30px;
       }
-      .span3{
-        width: 23.5%;
-        float: left;
-        margin-left: 2%;
-        .offset2{
-          margin-left: 19%;
+      .aside-sidebar{
+        @include hide-box();
+      }
+      .span9{
+        width: 100%;
+      }
+      .home-news{
+        .span6{
+          float: left;
         }
-      }
-      .thumbnail{
-        .caption{
-          line-height: 14px;
-        }
-      }
-    }
-    /* .home-news-box{
-      .thumbnails{
-        .span5{
-          display: block;
-          box-sizing: border-box;
+        .span3{
+          width: 23.5%;
           float: left;
           margin-left: 2%;
-          width: 49%;
-          &:first-child {
-            margin-left: 0;
+          .offset2{
+            margin-left: 19%;
           }
-          .thumbnail{
-            max-width: 180px;
-            margin: 0 auto;
+        }
+        .thumbnail{
+          .caption{
+            line-height: 14px;
           }
         }
       }
     }
-    .span3,
-    .span9{
-      float: none;
-      width: 100%;
-      margin-left: 0px;
-    } */
     margin-bottom: 0;
   }
 }
