--- a/themes/bootstrap/sass/_responsitive-max767.scss
+++ b/themes/bootstrap/sass/_responsitive-max767.scss
@@ -30,7 +30,7 @@
           .nav{
             >li{
               &:last-child{
-                @include hide-text();
+                @include hide-box();
               }
             }
           }
