--- a/themes/bootstrap/sass/screen.scss
+++ b/themes/bootstrap/sass/screen.scss
@@ -84,6 +84,7 @@ body{
       color: #9D9D00;
       >small{
         display: block;
+        font-size: 0.75em;
       }
     }
   }
@@ -151,49 +152,58 @@ body{
     }
   }
   .contact-form{
-    .required{
-      &:after{
-        content: "*";
+    span{
+      &.required{
         color: red;
-        margin-left: 5px;
+        /* &:after{
+          content: "*";
+          color: red;
+          margin-left: 5px;
+        } */
       }
     }
-    .error {
-      display: none;
-      margin-top: 3px;
-      margin-bottom: 5px;
-      font-size: 11px;
-      border: 1px solid #FF4F4F;
-      color: #D6000E;
-      background: #FFF2F2;
-      padding: 5px;
-      text-align: center;
-    }
-    .success {
-      display: none;
-      margin-top: 3px;
-      margin-bottom: 5px;
-      border: 1px solid #00CC00;
-      color: #4F8A10;
-      background: #F2FFF2;
-      font-size: 11px;
-      padding: 5px;
-      text-align: center;
-    }
-    .warning {
-      display: none;
-      margin-top: 3px;
-      font-size: 11px;
-      color: #9F6000;
-      background: #FFF9D5;
-      border: 1px solid #FFD324;
-      padding: 5px;
-      text-align: center;
-    }
+    // .error {
+    //   display: none;
+    //   margin-top: 3px;
+    //   margin-bottom: 5px;
+    //   font-size: 11px;
+    //   border: 1px solid #FF4F4F;
+    //   color: #D6000E;
+    //   background: #FFF2F2;
+    //   padding: 5px;
+    //   text-align: center;
+    // }
+    // .success {
+    //   display: none;
+    //   margin-top: 3px;
+    //   margin-bottom: 5px;
+    //   border: 1px solid #00CC00;
+    //   color: #4F8A10;
+    //   background: #F2FFF2;
+    //   font-size: 11px;
+    //   padding: 5px;
+    //   text-align: center;
+    // }
+    // .warning {
+    //   display: none;
+    //   margin-top: 3px;
+    //   font-size: 11px;
+    //   color: #9F6000;
+    //   background: #FFF9D5;
+    //   border: 1px solid #FFD324;
+    //   padding: 5px;
+    //   text-align: center;
+    // }
     .captcha{
       >img{
-        vertical-align:baseline;
-        margin-left: 20px;
+        margin:{
+          left: 10px;
+          right: 10px;
+        };
+        vertical-align: top;
+      }
+      .btn{
+        vertical-align: top;
       }
     }
   }
