--- a/themes/bootstrap/sass/home/_responsitive-max1024.scss
+++ b/themes/bootstrap/sass/home/_responsitive-max1024.scss
@@ -21,4 +21,16 @@
       }
     }
   }
+  .main{
+    .home-new-products{
+      .new-products-item{
+        img{
+          max-height: 115px;
+        }
+        .caption{
+          font-size: 90%;
+        }
+      }
+    }
+  }
 }
