--- a/themes/bootstrap/sass/home.scss
+++ b/themes/bootstrap/sass/home.scss
@@ -248,7 +248,8 @@
   .home-info{
   }
   .media{
-    margin-bottom: 15px;
+    margin-bottom: 5px;
+    padding-bottom: 10px;
   }
   .line{
     margin-top: 35px;
