--- a/themes/bootstrap/sass/screen.scss
+++ b/themes/bootstrap/sass/screen.scss
@@ -119,6 +119,16 @@ body{
         left: 30px;
       }
     }
+    .item-certificate{
+      margin:{
+        bottom: 25px;
+      }
+      .img-hover{
+        margin:{
+          bottom: 20px;
+        }
+      }
+    }
   }
   /* .contact-form{
     margin-left: 0;
