--- a/themes/bootstrap/sass/_responsitive-max480.scss
+++ b/themes/bootstrap/sass/_responsitive-max480.scss
@@ -1,4 +1,5 @@
 @media (max-width: 480px){
+  @include sticky-footer(250px, ".layout", ".layout-footer", ".footer");
   .header{
     .top-header{
       @include hide-box();
@@ -129,6 +130,11 @@
           left: 4%;
         }
       }
+    }
+  }
+  .footer{
+    .container{
+      padding-top: 20px;
     }
   }
 }
