update build app in host new.dendor.pl

--- a/themes/bootstrap/sass/_responsitive-max480.scss
+++ b/themes/bootstrap/sass/_responsitive-max480.scss
@@ -110,6 +110,13 @@
           float: none;
         }
       }
+      .image-item{
+        .muted *{
+          font: {
+            size: 80%;
+          }
+        }
+      }
     }
     .contact-office,
     .contact-form{
