--- a/themes/bootstrap/sass/screen.scss
+++ b/themes/bootstrap/sass/screen.scss
@@ -4,7 +4,7 @@
 body{
   //overflow-y: scroll;
   background:{
-    image: image-url("body_bg.png");
+    image: image-url("body_bg.png", false, false);
     position: top center;
     repeat: no-repeat;
   }
