--- a/themes/bootstrap/sass/_responsitive-max480.scss
+++ b/themes/bootstrap/sass/_responsitive-max480.scss
@@ -15,6 +15,12 @@
         width: 100%;
         top: 0;
         z-index: 1000;
+        .navbar-inner{
+          padding: {
+            left: 5px;
+            right: 5px;
+          }
+        }
       }
       .main-menu{
         position: fixed;
